--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -14,4 +14,4 @@ redirect_from:
 If the embedded PDF below does not load, you can <u><a href="https://egecancogulu.github.io/files/Egecan_Cogulu_Resume_Oct_2024.pdf">download it here.</a></u>
 <br/>
 
-<embed src="https://egecancogulu.github.io/files/Egecan_Cogulu_Resume_Oct_2024.pdf" type="application/pdf" width="100%" />
+<embed src="https://egecancogulu.github.io/files/Egecan_Cogulu_Resume_Oct_2024.pdf" type="application/pdf" width="100%"  height="100vh" />
