--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -11,7 +11,7 @@ redirect_from:
 {% include base_path %}
 {% capture written_label %}'None'{% endcapture %}
 
-If the embedded PDF below does not load, you can <u><a href="https://egecancogulu.github.io/files/Egecan_Cogulu_Resume_Oct_2024.pdf">download it here.</a></u>
+If the PDF below does not load, you can <u><a href="https://egecancogulu.github.io/files/Egecan_Cogulu_Resume_Oct_2024.pdf">download it here.</a></u>
 <br/>
 
-<embed src="https://egecancogulu.github.io/files/Egecan_Cogulu_Resume_Oct_2024.pdf" type="application/pdf" width="100%"  height="100vh" />
+<embed src="https://egecancogulu.github.io/files/Egecan_Cogulu_Resume_Oct_2024.pdf" type="application/pdf" width="100%"  height="800px" />
