--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -14,4 +14,6 @@ redirect_from:
 If the PDF below does not load, you can <u><a href="https://egecancogulu.github.io/files/Egecan_Cogulu_Resume_Oct_2024.pdf">download it here.</a></u>
 <br/>
 
-<embed src="https://egecancogulu.github.io/files/Egecan_Cogulu_Resume_Oct_2024.pdf" type="application/pdf" width="100%"  height="800px" />
+<div style="height: 90vh;">
+  <embed src="https://egecancogulu.github.io/files/Egecan_Cogulu_Resume_Oct_2024.pdf" type="application/pdf" width="100%" height="100%" />
+</div>
