it is shaping up

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -4,11 +4,11 @@ title: "Publications"
 permalink: /publications/
 author_profile: true
 ---
+You can download my PhD thesis directly from <a href="http://egecancogulu.github.io/files/cogulu_phd_thesis.pdf">here.</a> or access it from the <a href="https://www.proquest.com/openview/1d3dda68f151bd819649e1dae376b87f/1?pq-origsite=gscholar&cbl=18750&diss=y"> publisher's website.</a>
 
-You can download <a href="http://egecancogulu.github.io/files/cogulu_phd_thesis.pdf">my PhD thesis.</a>
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
+  <div class="wordwrap">You can also find all articles that I contributed on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>.
 {% endif %}
 
 {% include base_path %}
