--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -4,12 +4,10 @@ title: "Publications"
 permalink: /publications/
 author_profile: true
 ---
-You can download my PhD thesis directly from <a href="http://egecancogulu.github.io/files/cogulu_phd_thesis.pdf">here.</a> or view it from the <a href="https://www.proquest.com/openview/1d3dda68f151bd819649e1dae376b87f/1?pq-origsite=gscholar&cbl=18750&diss=y"> here.</a>
 
+Below you can find the papers that I contributed to during my studies. <div class="wordwrap"> They are also on my <a href="{{site.author.googlescholar}}">Google Scholar profile</a>.</div>
 
-{% if site.author.googlescholar %}
-  Below you can find the papers that I contributed to during my studies. <div class="wordwrap"> They are also on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
-{% endif %}
+You can download my PhD thesis from <a href="http://egecancogulu.github.io/files/cogulu_phd_thesis.pdf">here</a> or view it from <a href="https://www.proquest.com/openview/1d3dda68f151bd819649e1dae376b87f/1?pq-origsite=gscholar&cbl=18750&diss=y"> here</a>.
 
 {% include base_path %}
 
