modified all publications

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,12 +5,10 @@ permalink: /publications/
 author_profile: true
 ---
 
-Below you can find all the papers that I contributed to during my PhD.<div class="wordwrap">They are also on my <a href="{{site.author.googlescholar}}">Google Scholar profile</a>.</div>
+Below you can find all the publications that I have contributed to during my PhD.
+<div class="wordwrap">They are also on my <a href="{{site.author.googlescholar}}">Google Scholar profile</a>.</div>
 <br>
-You can download my PhD thesis from <a href="http://egecancogulu.github.io/files/cogulu_phd_thesis.pdf">here</a> or view it from <a href="https://www.proquest.com/openview/1d3dda68f151bd819649e1dae376b87f/1?pq-origsite=gscholar&cbl=18750&diss=y"> here</a>.
-
-{% include base_path %}
-
+You can view my PhD thesis directly from <a href="http://egecancogulu.github.io/files/cogulu_phd_thesis.pdf">here</a>.
 <!-- New style rendering if publication categories are defined -->
 {% if site.publication_category %}
   {% for category in site.publication_category  %}
