--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,20 +1,8 @@
 ---
 title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+excerpt: "Short description of portfolio item number 2 <br/><img src='/images/Publicity Figure.png'>"
 collection: portfolio
 ---
 
 This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
 
-
-<img src="images/CASE_II.png" alt="Image Description" style="width:100%; height:auto;">
-
-<br>
-
-<img src="images/CASE_II3.png" alt="Image Description" style="width:100%; height:auto;">
-
-
-<video width="600" controls>
-    <source src="images/CaseAvideo.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
