--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -7,14 +7,72 @@ redirect_from:
   - /wordpress/cv/
 ---
 
+<title>Resume</title>
 
-{% include base_path %}
-{% capture written_label %}'None'{% endcapture %}
+ You can download PDF version of my resume from <u><a href="https://egecancogulu.github.io/files/Egecan_Cogulu_Resume_Oct_2024_wp.pdf">here</a></u> or view it at the <a href="#embedded-resume">bottom</a> of the page.
+</style>
+</head>
+<body>
+<h2>Education</h2>
+<ul>
+  <li>Ph.D in Physics, New York University, 2022</li>
+  <li>B.S. in Mechanical Engineering, Bogazici University, 2015</li>
+  <li>B.S. in Physics (Double Major), Bogazici University, 2015</li>
+</ul>
 
-If the PDF below does not load, you can <u><a href="https://egecancogulu.github.io/files/Egecan_Cogulu_Resume_Oct_2024_wp.pdf">download it here.</a></u>
-<br/>
+<h2>Experience</h2>
+
+    <strong>Senior Data Scientist, Happy Returns a UPS Company</strong> <em>(Nov 2023 - Present)</em>
+    <ul class="sub-list"> 
+      <li>Led the design, implementation, and analysis of multi-round A/B tests to evaluate the effects of choice availability on customer behavior, resulting in 4% increased foot traffic for preferred partners.</li>
+      <li>Optimized shipping cadence of 10,000 unique shipping centers using statistical modeling and time-series forecasting, saving ~5% in shipping costs (monthly ~$50,000).</li>
+      <!-- <li> Collaborated with product and engineering teams on the development of a machine learning-based fraud detection system, improving precision and recall to balance false positives and negatives, resulting in a 30% reduction in fraud-related losses.</li> -->
+    </ul>
+    <strong>Data Scientist, Happy Returns by PayPal</strong> <em>(May 2022 - Nov 2023)</em>
+    <ul class="sub-list">
+      <li>Developed a linear predictive model to forecast usage of shipping supplies for 10,000 locations, resulting in a 80% reduction in stock-outs.</li>
+      <li>Created data visualization dashboards and reports using Excel, Tableau and Looker to track success metrics for cross-functional projects that were adopted by multiple departments.</li>
+    </ul>
+
+    <strong>Research Assistant, Center for Quantum Phenomena, NYU</strong>  <em>(Sep 2016 - May 2022)</em>
+    <ul class="sub-list">
+      <li>Collected and analyzed 100s of GBs of image data from electron microscopy experiments, using methods such as peak finding, edge detection, background subtraction, non-linear filtering and feature aligning. Developed interactive tools for 3D visualizations using Jupyter notebooks. </li>
+      <li>Analyzed multi-dimensional voltage data as a function of temperature, electric current, magnetic field strength and direction. Extracted fit parameters by modeling the response analytically and numerically.</li>
+
+    </ul>
+
+
+
+<h2>Skills</h2>
+
+    <strong>Programming Languages:</strong>
+    <u2 class="sub-list">
+      <li>Python: 10+ years of experience</li> 
+      <li>SQL: 3+ years of experience</li>
+      <li>Others: MATLAB, C, R and Mathematica</li>
+    </u2>
+  <strong>Expertise:</strong>
+      <u1 class="sub-list">
+        <li>Forecasting and statistical Modeling</li>
+        <li>A/B Testing & Causal Inference</li>
+        <li>Monte-Carlo Simulations </li>
+      </u1>
+
+<!-- <h1>Skills</h1>
+<ul>
+  <li>Skill 1</li>
+  <li>Skill 2
+    <ul class="sub-list">
+      <li>Sub-skill 2.1</li>
+      <li>Sub-skill 2.2</li>
+      <li>Sub-skill 2.3</li>
+    </ul>
+  </li>
+  <li>Skill 3</li>
+</ul> -->
+
+<h2 id="embedded-resume">Resume</h2>
 Last updated: October 2024.
-<br/>
 <br/>
 <div style="height: 90vh;">
   <embed src="https://egecancogulu.github.io/files/Egecan_Cogulu_Resume_Oct_2024_wp.pdf" type="application/pdf" width="100%" height="100%" />
