updated about and resume sections

--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -8,8 +8,7 @@ redirect_from:
 ---
 
 <title>Resume</title>
-
- You can download PDF version of my resume from <u><a href="https://egecancogulu.github.io/files/Egecan_Cogulu_Resume_Oct_2024_wp.pdf">here</a></u> or view it at the <a href="#embedded-resume">bottom</a> of the page.
+ You can download PDF version of my resume from <a href="https://egecancogulu.github.io/files/Egecan_Cogulu_Resume_Oct_2024_wp.pdf">here</a> or view it at the <a href="#embedded-resume">bottom of the page.</a>
 </style>
 </head>
 <body>
@@ -43,20 +42,29 @@ redirect_from:
 
 
 
-<h2>Skills</h2>
+<h2>Technical Skills</h2>
 
     <strong>Programming Languages:</strong>
     <u2 class="sub-list">
       <li>Python: 10+ years of experience</li> 
+  
       <li>SQL: 3+ years of experience</li>
       <li>Others: MATLAB, C, R and Mathematica</li>
     </u2>
-  <strong>Expertise:</strong>
+    <strong>Expertise:</strong>
+    <u1 class="sub-list">
+      <li>Forecasting and statistical Modeling</li>
+      <li>A/B Testing & Causal Inference</li>
+      <li>Monte-Carlo Simulations </li>
+    </u1>
+    <strong>Tools:</strong>
       <u1 class="sub-list">
-        <li>Forecasting and statistical Modeling</li>
-        <li>A/B Testing & Causal Inference</li>
-        <li>Monte-Carlo Simulations </li>
+        <li>Dashboarding: Looker, Tableau, PowerBI</li>
+        <li>Python Libraries: Pandas, Numpy, Scipy, Prophet, Scikit-learn, Matplotlib, Plotly</li>
+        <li>Cloud: GCP, AWS</li>
       </u1>
+
+
 
 <!-- <h1>Skills</h1>
 <ul>
