--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -8,7 +8,7 @@ redirect_from:
 ---
 
 <title>Resume</title>
- You can download PDF version of my resume from <a href="https://egecancogulu.github.io/files/Ege_Cogulu_Resume_Nov_2024.pdf">here</a> or view it at the <a href="#embedded-resume">bottom of the page.</a>
+ You can download a PDF version of my resume from <a href="https://egecancogulu.github.io/files/Ege_Cogulu_Resume_Nov_2024.pdf">here</a> or view it at the <a href="#embedded-resume">bottom of the page.</a>
 </style>
 </head>
 <body>
@@ -29,7 +29,7 @@ redirect_from:
     </ul>
     <strong>Data Scientist, Happy Returns by PayPal</strong> <em>(May 2022 - Nov 2023)</em>
     <ul class="sub-list">
-      <li>Developed a linear predictive model to forecast usage of shipping supplies for 10,000 locations, resulting in a 80% reduction in stock-outs.</li>
+      <li>Developed a linear predictive model to forecast usage of shipping supplies for 10,000 locations, resulting in an 80% reduction in stock-outs.</li>
       <li>Created data visualization dashboards and reports using Excel, Tableau and Looker to track success metrics for cross-functional projects that were adopted by multiple departments.</li>
     </ul>
 
@@ -53,7 +53,7 @@ redirect_from:
     </u2>
     <strong>Expertise:</strong>
     <u1 class="sub-list">
-      <li>Forecasting and statistical Modeling</li>
+      <li>Forecasting and Statistical Modeling</li>
       <li>A/B Testing & Causal Inference</li>
       <li>Monte-Carlo Simulations </li>
     </u1>
